to create a gap inbetween the elements, you can use 'gap: row column'. This only works for inbetween, not the outer side. So make sure to add the empty rows and columns for the outer spacing

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,8 @@ body {
 
 @media (min-width: 600px) {
     .card {
-      grid-template: 1em auto auto 180px 1em  / 200px 1em auto 1em;
+      grid-template: 1em auto auto 180px 1em  / 200px auto auto 1em;
+      gap: 1em;
     }
 
     .card-img {
@@ -100,11 +101,11 @@ body {
     }
 
     .card-title {
-      grid-column: 3;
+      grid-column: 3 / 4;
     }
 
     .card-body {
-      grid-column: 3;
+      grid-column: 3 / 4;
     }
 
     .card-read-time {
